[project]
name = "stream-repub"
version = "0.1.0"
description = "Republisher for h264 stream via WebRTC to ROS2 topic sensor_msgs/msg/Image"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.13.3",
    "aiortc>=1.14.0",
    "catkin-pkg>=1.1.0",
    "empy==3.3.4",
    "lark-parser>=0.12.0",
    "numpy==1.26.4",
    "opencv-python>=4.11.0.86",
    "requests>=2.32.5",
]
